Alteração de layout issue #4
Fix bug Banner Transição
ajuste de alinhamento e espaçamento
alterçã da ordem dos itens (asc for desc)
adição da brand Maná WEB

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,8 @@ padding:20px;
 }
 .agenda{
 list-style:none;
-padding:0px 20px 0px 20px;
+padding-left: 10px;
+
 }
 .agenda > li > div > a,{
 color:#FFFFFF;
@@ -170,8 +171,11 @@ font-size: 27px;
 margin: 40px;
 position: absolute;
 }
+.panel-heading {
+padding: 1px 1px;
+}
 .agendaposition{
-padding:0px 0px 0px 110px;
+padding:0px 10px 0px 80px;
 }
 .input-group-addon{
 background-color:#125758;
@@ -211,9 +215,11 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb76b', endC
 /* IE6-8 fallback on horizontal gradient */
 :;
 }
+
 .faq-cat-content{
-margin-top:25px;
+margin-top:0px;
 }
+
 .faq-cat-tabs li a{
 background-color:#9F0034;
 border:none;
@@ -343,7 +349,7 @@ border-color:#FF5154;
 padding:0px 20px;
 }
 .navbar-collapse{
-max-height:486px !important;
+max-height:530px !important;
 }
 .agenda .panel-body{
 /* IE9 SVG, needs conditional override of 'filter' to 'none' */
@@ -531,7 +537,13 @@ text-align:right;
 
 .cycle-slideshow { 
   width: auto; 
-  margin:5% 0% 0% -2%; 
+  margin: 0% 0% 0% -2%; 
+}
+
+.cycle-slideshow a{ 
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .cycle-slide {
